style tweaks; fixed partner page on mobile; fixed page anchor messing up nav on mobile

--- a/site/src/components/page-form/page-form.scss
+++ b/site/src/components/page-form/page-form.scss
@@ -1,6 +1,7 @@
 page-form {
    display: flex;
    flex-direction: column;
+   position: relative;
 
    h1 {
       margin-top: 150px;
@@ -14,26 +15,34 @@ page-form {
 
    .main-logo {
       position: absolute;
+      left: -3rem;
       z-index: -1;
       opacity: 80%;
       max-height: 350px;
       @include on-mobile() {
          max-height: 175px;
+         left: -2rem;
       }
    }
 
    .custom-logo {
       align-self: flex-start;
       margin: 5em 0 2em 0;
-      max-height: 80px;
+      max-height: 70px;
 
       @include on-mobile() {
-         max-height: 60px;
+         max-height: 40px;
+         margin: 0.5em 0 1em 0;
       }
+
       &.dark {
+         max-height: 80px;
          padding: 0.25em;
          background-color: #fff;
          border-radius: 10px;
+         @include on-mobile() {
+            max-height: 50px;
+         }
       }
    }
 
